[gd_scene load_steps=7 format=2]

[ext_resource path="res://Other/Credits.gd" type="Script" id=1]
[ext_resource path="res://Other/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Other/Font_Extra_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Other/Font_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/background_menu.jpg" type="Texture" id=5]
[ext_resource path="res://Sprites/button_arrow_left.png" type="Texture" id=6]

[node name="Credits" type="Node"]
script = ExtResource( 1 )

[node name="background_menu" type="Sprite" parent="."]
position = Vector2( 440.904, 190.326 )
texture = ExtResource( 5 )

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 66.7678
margin_top = 53.2444
margin_right = 252.768
margin_bottom = 74.2444
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "CraftPix.com"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 72.1249
margin_top = 4.94975
margin_right = 244.125
margin_bottom = 33.9497
custom_fonts/font = ExtResource( 2 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 129.047
margin_top = 39.2444
margin_right = 191.047
margin_bottom = 53.2444
custom_fonts/font = ExtResource( 3 )
text = "Assets"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 129.047
margin_top = 74.2444
margin_right = 191.047
margin_bottom = 88.2444
custom_fonts/font = ExtResource( 3 )
text = "Sounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 139.96
margin_top = 110.707
margin_right = 181.96
margin_bottom = 124.707
custom_fonts/font = ExtResource( 3 )
text = "Font"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="."]
margin_left = 98.5355
margin_top = 88.2444
margin_right = 222.536
margin_bottom = 106.244
custom_fonts/font = ExtResource( 4 )
text = "Mixkit.co"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton3" type="LinkButton" parent="."]
margin_left = 78.4889
margin_top = 124.707
margin_right = 249.489
margin_bottom = 142.707
custom_fonts/font = ExtResource( 4 )
text = "Dafont.com"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 216.677
margin_top = 148.233
margin_right = 312.677
margin_bottom = 172.233
custom_fonts/font = ExtResource( 4 )
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_arrow_left" type="Sprite" parent="Button"]
position = Vector2( 10.7338, 11.771 )
scale = Vector2( 0.2868, 0.2868 )
texture = ExtResource( 6 )

[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="LinkButton2" to="." method="_on_LinkButton2_pressed"]
[connection signal="pressed" from="LinkButton3" to="." method="_on_LinkButton3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
